# rust-lambda

.github/: pull_request_template.md
.github/workflows/: general.yml  pull_request_code.yml  pull_request_infrastructure.yml
infrastructure/: .eslintrc.cjs  .prettierignore  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: database-stack.ts  github-actions-role-stack.ts  rust-lambda-stack.ts
infrastructure/test/: database-stack.spec.ts  rust-lambda-stack.spec.ts  utils.ts
infrastructure/test/__snapshots__/: database-stack.spec.ts.snap  rust-lambda-stack.spec.ts.snap
rust_lambda/: Cargo.toml  README.md
rust_lambda/get_all/: Cargo.toml
rust_lambda/get_all/src/: main.rs
rust_lambda/insert/: Cargo.toml
rust_lambda/insert/src/: main.rs
rust_lambda/item/: Cargo.toml
rust_lambda/shared/: Cargo.toml
rust_lambda/shared/src/: lib.rs
rust_lambda/shared/src/test/: dynamodb.rs  mod.rs
