[package]
name = "get_all"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
serde_dynamo = {version = "^4.2.14", features = ["aws-sdk-dynamodb+1"]}
lambda_http = "0.14.0"
aws-sdk-dynamodb = "1.57.0"
aws-config = "1.5.12"
tokio = { version = "1.42.0", features = ["macros"] }
shared = { path = "../shared" }